--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     padding:0;
     margin:0;
@@ -7,9 +8,12 @@ body{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: black;
     color:#e7e7e7;
-    min-height:100vh;
+    /* min-height:100vh; */
     line-height:1.5;
     overflow-x: hidden;
+}
+html{
+    scroll-behavior: smooth;
 }
 /*Gradient*/
 .image-gradient{
@@ -154,7 +158,7 @@ main{
     justify-content: center;
     /* align-items: center; */
     width:100%;
-
+    /* height:30vh; */
 }
 .line{
     height:0px;
@@ -165,7 +169,7 @@ main{
     left:5%; */
     margin-left:5%;
 }
-.about h1{
+.about h1,.skills h1{
     font-size:3rem;
     font-weight: 500;
     letter-spacing: 0.1rem;
@@ -182,17 +186,110 @@ main{
     color:rgba(211, 211, 211, 0.676);
     line-height: 2.5rem;
     margin-left:5%;
-}
 
+}
+.blob.aos-init.aos-animate{
+    height:20rem;
+}
 .skills{
-    margin-top:10rem;
+    margin-top:-13rem;
 }
 
 .blob{
     position: relative;
     /* top:0px; */
-    bottom:40rem;
+    bottom:25rem;
     left:30rem;
     z-index: -1;
     /* height: 10rem; */
+}
+
+
+/*Slider*/
+.slider{
+    position: relative;
+    top:30rem;
+    left:20rem;
+    width:60%;
+    height:var(--height);
+    overflow:hidden;
+    mask-image: linear-gradient(
+        to right,
+        transparent,
+        #000 10% 90%,
+        transparent
+    );
+    mix-blend-mode: difference;
+    opacity: 0.8;
+}
+.slider .list{
+    display:flex;
+    justify-content: space-around;
+    width:100%;
+    height:var(--height);
+    min-width: calc(var(--width)* var(--quantity)); 
+    position:relative;
+}
+.slider .list .item{
+    width: var(--width);
+    height: var(--height);
+    position:absolute;
+    left:100%;
+    animation: autoRun 10s linear infinite;
+    transition: filter 0.5s;
+    animation-delay: calc( (10s / var(--quantity)) * (var(--position) - 1 ) - 10s)!important;
+}
+.slider.list.item img{
+    width:100%;
+}
+
+@keyframes autoRun {
+    from{
+        left:100%;
+    }to{
+        left:calc(var(--width)* -1);
+    }
+}
+
+.slider:hover .item{
+    animation-play-state: paused !important;
+    filter:grayscale(1);
+}
+.slider .item:hover{
+    filter:grayscale(0);
+}
+.skill-info-box{
+    position:relative;
+    top:-3rem;
+    width:30rem;
+    height:20rem;
+    border-radius: 20px;
+    background: linear-gradient(to right, #656565,#7f42a7,#6600c5,#5300a0,#757575,#656565);
+    background-size: 200%;
+    animation: animationGradientSkillBox 2.5s linear infinte;
+    box-shadow:0 0 15px rgba(255, 255, 255, 0.303);
+    margin-left:5rem;
+}
+@keyframes animationGradientSkillBox{
+    to{
+        background-position: 200%;
+    }
+}
+.skill-info{
+    position: absolute;
+    height:99%;
+    width:99%;
+    inset:3px 3px 3px 3px;
+    background-color: black;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s ease;
+    cursor:pointer;
+}
+.cubes{
+   position:relative;
+   left:60rem;
+   bottom:35rem;
 }
