--- a/style.css
+++ b/style.css
@@ -194,7 +194,9 @@ main{
 .skills{
     margin-top:-13rem;
 }
-
+.skills h1{
+    margin-top: 5rem;
+}
 .blob{
     position: relative;
     /* top:0px; */
@@ -208,7 +210,7 @@ main{
 /*Slider*/
 .slider{
     position: relative;
-    top:30rem;
+    top:7rem;
     left:20rem;
     width:60%;
     height:var(--height);
@@ -260,11 +262,11 @@ main{
 }
 .skill-info-box{
     position:relative;
-    top:-3rem;
-    width:30rem;
+    top:4rem;
+    width:40rem;
     height:20rem;
     border-radius: 20px;
-    background: linear-gradient(to right, #656565,#7f42a7,#6600c5,#5300a0,#757575,#656565);
+    border:1px solid rgb(80, 3, 80) ;
     background-size: 200%;
     animation: animationGradientSkillBox 2.5s linear infinte;
     box-shadow:0 0 15px rgba(255, 255, 255, 0.303);
@@ -276,20 +278,19 @@ main{
     }
 }
 .skill-info{
-    position: absolute;
-    height:99%;
-    width:99%;
-    inset:3px 3px 3px 3px;
-    background-color: black;
+    position:relative;
+    margin-top:3rem;
+    left:5rem;
+    height:25rem;
+    width:45rem;
     border-radius: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: 0.5s ease;
-    cursor:pointer;
+    font-size:1.2rem;
+    letter-spacing: 0.05rem;
+    color:rgba(211, 211, 211, 0.676);
+    line-height: 2.5rem;
 }
 .cubes{
    position:relative;
-   left:60rem;
-   bottom:35rem;
+   left:55rem;
+   bottom:40rem;
 }
