--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ main{
     left:5%; */
     margin-left:5%;
 }
-.about h1,.skills h1{
+.about h1,.skills h1,.projects h1{
     font-size:3rem;
     font-weight: 500;
     letter-spacing: 0.1rem;
@@ -193,9 +193,6 @@ main{
 }
 .skills{
     margin-top:-13rem;
-}
-.skills h1{
-    margin-top: 5rem;
 }
 .blob{
     position: relative;
@@ -293,4 +290,9 @@ main{
    position:relative;
    left:55rem;
    bottom:40rem;
+}
+
+
+.projects{
+    margin-top:-23rem;
 }
